--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Server configuration
- server.servlet.context-path=/SpringMVC
- spring.mvc.servlet.path=/servlet
+ #server.servlet.context-path=/SpringMVC
+ #spring.mvc.servlet.path=/servlet 
  server.port=8081
  ### DATABASE ###
  #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -9,13 +9,26 @@
  spring.datasource.password=
  ### JPA / HIBERNATE ###
  spring.jpa.show-sql=true
- spring.jpa.hibernate.ddl-auto=update
+ spring.jpa.hibernate.ddl-auto= update
  spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+ spring.mail.properties.mail.smtp.ssl.trust=*
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=3000
+spring.mail.properties.mail.smtp.writetimeout=5000
 #Web configuration
  spring.mvc.view.prefix=/views/
  spring.mvc.view.suffix=.jsp
-
+#For mailing service
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.username=root
+spring.mail.password=admin
  #logging configuration
  logging.level.tn.esprit.service=debug
  logging.level.tn.esprit.repository=warn
  logging.file=C:\logs\springboot.log
+ 
+ jwt.secret=mySecret
+jwt.expiration=604800
