--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+  			<groupId>com.stripe</groupId>
+  			<artifactId>stripe-java</artifactId>
+  			<version>20.46.0</version>
+</dependency>
 	</dependencies>
 	<build>
 		<plugins>
