--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Server configuration
- server.servlet.context-path=/SpringMVC
- spring.mvc.servlet.path=/servlet
+ #server.servlet.context-path=/SpringMVC
+ #spring.mvc.servlet.path=/servlet
  server.port=8081
  ### DATABASE ###
  #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -19,3 +19,10 @@
  logging.level.tn.esprit.service=debug
  logging.level.tn.esprit.repository=warn
  logging.file=C:\logs\springboot.log
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=realestatedaritn@gmail.com
+spring.mail.password=dariTngrp4
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
