--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@
  #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
  spring.datasource.url=jdbc:mysql://localhost:3306/dari?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
  spring.datasource.username=root
- spring.datasource.password=
+ spring.datasource.password=98553393houssem
  ### JPA / HIBERNATE ###
  spring.jpa.show-sql=true
  spring.jpa.hibernate.ddl-auto=update
